basic introduction logistic regression

--- a/TF2-basic-introduction-logistic-reg.ipynb
+++ b/TF2-basic-introduction-logistic-reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "compact-mandate",
+   "id": "wrong-analyst",
    "metadata": {},
    "source": [
     "# **Basic introduction to Logistic Regression in TensorFlow 2.0**\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "muslim-jerusalem",
+   "id": "advised-collins",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "narrow-paragraph",
+   "id": "rational-certification",
    "metadata": {},
    "source": [
     "## **The Iris classification problem**\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continent-portland",
+   "id": "loving-liberal",
    "metadata": {},
    "source": [
     "### **Import and parse the training data set**\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "desirable-connectivity",
+   "id": "awful-canadian",
    "metadata": {},
    "source": [
     "#### **Download the dataset**"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "composed-prague",
+   "id": "commercial-overall",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "threatened-profession",
+   "id": "approximate-corrections",
    "metadata": {},
    "source": [
     "#### **Inspect the data**\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "annoying-monitoring",
+   "id": "gentle-parking",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "thorough-deputy",
+   "id": "grand-interference",
    "metadata": {},
    "source": [
     "Note the following:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "earned-recipe",
+   "id": "ruled-employer",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excited-failure",
+   "id": "southeast-binding",
    "metadata": {},
    "source": [
     "Each label is associated with a string name (e.g. `setosa`), but ML typically relies on *numeric values*. The label numbers are mapped to a named representation, such as:\n",
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "geological-stage",
+   "id": "soviet-exclusion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-clock",
+   "id": "closed-duplicate",
    "metadata": {},
    "source": [
     "#### **Create a tf.data.Dataset**\n",
@@ -211,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "registered-module",
+   "id": "global-market",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "excess-traffic",
+   "id": "thick-platinum",
    "metadata": {},
    "source": [
     "The `make_csv_dataset` function returs a `tf.data.Dataset` of `(features, label)` pairs, where `features` is a `dict`: `{\"feature_name\": value}`.\n",
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "norwegian-steering",
+   "id": "determined-airline",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "qualified-squad",
+   "id": "automatic-batch",
    "metadata": {},
    "source": [
     "Like-features are grouped together, or *batched*. Each example row's fields are appended to the corresponding feature array. The `batch_size` parameter controls the number of examples stored in the feature arrays. Let's have a look at some plots."
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "czech-lending",
+   "id": "employed-michigan",
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-arbor",
+   "id": "twelve-planning",
    "metadata": {},
    "source": [
     "To simplify the model building step, create a function to repackage the features `dict` into a single array with shape: `(batch_size, num_features)`. This function uses the `tf.stack` method which takes values from a list of tensors and creates a combined tensor at the specified dimension."
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "suitable-thompson",
+   "id": "continuing-hospital",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-listing",
+   "id": "alert-sperm",
    "metadata": {},
    "source": [
     "Then use the `tf.data.Dataset` `map` method to pack the `features` of each `(features, label)` pair into the training dataset."
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "peaceful-status",
+   "id": "satisfactory-segment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "political-contest",
+   "id": "isolated-tongue",
    "metadata": {},
    "source": [
     "The features element of the `tf.data.Dataset` are now arrays with shape `(batch_size, num_features)`. Let's have a look at a few examples."
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "existing-coalition",
+   "id": "clean-membership",
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "connected-mathematics",
+   "id": "likely-apparatus",
    "metadata": {},
    "source": [
     "### **Select the type of model**"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beneficial-outreach",
+   "id": "threaded-magnitude",
    "metadata": {},
    "source": [
     "#### **Why model ?**\n",
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "copyrighted-orientation",
+   "id": "obvious-pepper",
    "metadata": {},
    "source": [
     "#### **Select the model**\n",
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "imported-stack",
+   "id": "searching-aluminum",
    "metadata": {},
    "source": [
     "#### **Create a model using `tf.keras.Sequential`**"
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "empirical-chance",
+   "id": "abandoned-science",
    "metadata": {},
    "source": [
     "The TensorFlow `tf.keras` API is the preferred way to created models and layers. This makes it easy to build models and experiment while `Keras` handles the complexity of connecting everything together.\n",
@@ -438,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "noted-terror",
+   "id": "critical-edgar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "female-housing",
+   "id": "capable-bedroom",
    "metadata": {},
    "source": [
     "#### **Using the model**"
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interracial-complaint",
+   "id": "corporate-truth",
    "metadata": {},
    "source": [
     "Let's have a quick look at what this model does with a batch of `features`"
@@ -468,7 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "considered-trash",
+   "id": "outside-verse",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valid-material",
+   "id": "defensive-nursing",
    "metadata": {},
    "source": [
     "Here each example returns a `logit` for each class. A **logit** is a vector of raw predictions generated by a classification model, and is generally passed on to a normalised function. If the model is solving a multi-class classification problem, logits are generally fed into the `softmax` function. **softmax** generates a vector of normalised probabilities with one value for each possible class.\n",
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "reasonable-photographer",
+   "id": "emerging-engineer",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nervous-rainbow",
+   "id": "sticky-kansas",
    "metadata": {},
    "source": [
     "And taking the `tf.argmax` across classes gives us the predicted class index. "
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "electrical-trace",
+   "id": "hazardous-ballet",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "circular-slovak",
+   "id": "owned-spice",
    "metadata": {},
    "source": [
     "But the model hasn't been trained yet, so these aren't good predictions. Indeed, the model here predicts that all species are *Iris versicolor*..."
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "confidential-pennsylvania",
+   "id": "metallic-indian",
    "metadata": {},
    "source": [
     "### **Train the model**\n",
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "associate-cuisine",
+   "id": "norman-glenn",
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dangerous-water",
+   "id": "gorgeous-masters",
    "metadata": {},
    "source": [
     "Gradients are calculated as vectors of partial derivatives of the model function. The gradient points in the direction of steepest ascent. They're stored within a *context*, using `tf.GradientTape`."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "laden-working",
+   "id": "uniform-attention",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "forward-tourist",
+   "id": "amazing-reunion",
    "metadata": {},
    "source": [
     "#### **Create an optimiser**"
@@ -642,22 +642,79 @@
   },
   {
    "cell_type": "markdown",
-   "id": "searching-maple",
+   "id": "tested-protest",
    "metadata": {},
    "source": [
-    "An **optimiser** applies the computed gradients to the model variables to minimise the `loss` function. You can think of the loss function as a curved surface and the goal is to find its lowest point by walking around. The gradient points in the direction of the steepest ascent - so we'll travel to the opposite way and move down the hill. **By iteratively calculating the loss and gradient for each batch, we'll adjust the model during training**. Gradually, the best combination of weights and bias will be found to minimise loss. And the lower the loss, the better the model predictions. **Gradient descent** is an algorithm used for finding the optimal model configuration (i.e. parameters values) by minimising the model loss thanks to the computation of the gradients of loss with respect to the model parameters, conditioned on training data. Informall\n",
+    "An **optimiser** applies the computed gradients to the model variables to minimise the `loss` function. You can think of the loss function as a curved surface and the goal is to find its lowest point by walking around. The gradient points in the direction of the steepest ascent - so we'll travel to the opposite way and move down the hill. **By iteratively calculating the loss and gradient for each batch, we'll adjust the model during training**. Gradually, the best combination of weights and bias will be found to minimise loss. And the lower the loss, the better the model predictions. \n",
+    "\n",
+    "**Gradient descent** is an algorithm used for finding the optimal model configuration (i.e. parameters values) by minimising the model loss thanks to the computation of the gradients of loss with respect to the model parameters, conditioned on training data. Informally, gradient descent iteratively adjusts parameters gradually finding the best combination of weights and bias to minimise loss.\n",
     "\n",
     "<img src=\"gradients.gif\" width=500 height=500> \n",
     "\n",
-    "TensorFlow has many optimisation algorithms available for training. Here we'll use `tf.keras.optimizers.SGD` that implements the *stochastic gradient descent* (SGD) algorithm. **Stochastic gradient descent** is a gradient descent algorithm in which the batch size is equal to $1$, relying on a single example chosen uniformly at random from a data set. The `learning_rate` sets the step size to take for each iteration down the hill. This is a *hyperparameter* that controls the training process itslef and is commonly adjusted to achieve better results."
+    "TensorFlow has many optimisation algorithms available for training. Here we'll use `tf.keras.optimizers.SGD` that implements the *stochastic gradient descent* (SGD) algorithm. **Stochastic gradient descent** is a gradient descent algorithm in which the batch size is equal to $1$, relying on a single example chosen uniformly at random from a data set. The `learning_rate` sets the step size to take for each iteration down the hill. This is a *hyperparameter* that controls the training process itslef and is commonly adjusted to achieve better results.\n",
+    "\n",
+    "Let's build the optimiser."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "strong-bronze",
+   "execution_count": 43,
+   "id": "marine-shirt",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "experimental-cisco",
+   "metadata": {},
+   "source": [
+    "Now let's use the optimiser to compute a single optimisation step and see what happens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "caroline-teacher",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step: 0, Initial Loss: 1.8248038291931152\n",
+      "Step: 0,         Loss: 1.5501675605773926\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss_value, grads = grad(model, features, labels)\n",
+    "\n",
+    "print(\"Step: {}, Initial Loss: {}\".format(\n",
+    "    optimizer.iterations.numpy(),\n",
+    "    loss_value.numpy()))\n",
+    "\n",
+    "optimiser.apply_gradients(zip(grads, model.trainable_variables))\n",
+    "\n",
+    "print(\"Step: {},         Loss: {}\".format(\n",
+    "    optimizer.iterations.numpy(),\n",
+    "    loss(model, features, labels, training=True).numpy()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "australian-shareware",
+   "metadata": {},
+   "source": [
+    "#### **Training loop**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "solid-clarity",
+   "metadata": {},
    "source": []
   }
  ],
