--- a/TF2-basic-introduction-logistic-reg.ipynb
+++ b/TF2-basic-introduction-logistic-reg.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "sustainable-diploma",
+   "id": "convertible-luxury",
    "metadata": {},
    "source": [
     "# **Basic introduction to Logistic Regression in TensorFlow 2.0**\n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "subject-township",
+   "id": "duplicate-press",
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formal-football",
+   "id": "blank-adventure",
    "metadata": {},
    "source": [
     "## **The Iris classification problem**\n",
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "paperback-account",
+   "id": "monetary-moment",
    "metadata": {},
    "source": [
     "### **Import and parse the training data set**\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mature-rider",
+   "id": "simple-petersburg",
    "metadata": {},
    "source": [
     "#### **Download the data set**"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "compound-wagon",
+   "id": "fifty-weapon",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "designed-dressing",
+   "id": "israeli-removal",
    "metadata": {},
    "source": [
     "#### **Inspect the data**\n",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "twenty-september",
+   "id": "cleared-procurement",
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "graduate-exposure",
+   "id": "respiratory-barrier",
    "metadata": {},
    "source": [
     "Note the following:\n",
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "frank-armstrong",
+   "id": "static-outline",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sublime-avenue",
+   "id": "juvenile-marker",
    "metadata": {},
    "source": [
     "Each label is associated with a string name (e.g. `setosa`), but ML typically relies on *numeric values*. The label numbers are mapped to a named representation, such as:\n",
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "through-evans",
+   "id": "organic-christianity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-accused",
+   "id": "unique-climate",
    "metadata": {},
    "source": [
     "#### **Create a tf.data.Dataset**\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "infectious-natural",
+   "id": "tropical-discharge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-beaver",
+   "id": "stock-twins",
    "metadata": {},
    "source": [
     "The `make_csv_dataset` function returs a `tf.data.Dataset` of `(features, label)` pairs, where `features` is a `dict`: `{\"feature_name\": value}`.\n",
@@ -237,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "amateur-substitute",
+   "id": "infrared-religion",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "whole-dealing",
+   "id": "stable-metabolism",
    "metadata": {},
    "source": [
     "Like-features are grouped together, or *batched*. Each example row's fields are appended to the corresponding feature array. The `batch_size` parameter controls the number of examples stored in the feature arrays. Let's have a look at some plots."
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "permanent-visit",
+   "id": "false-immigration",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "special-master",
+   "id": "equal-proposal",
    "metadata": {},
    "source": [
     "To simplify the model building step, create a function to repackage the features `dict` into a single array with shape: `(batch_size, num_features)`. This function uses the `tf.stack` method which takes values from a list of tensors and creates a combined tensor at the specified dimension."
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "informational-tribune",
+   "id": "likely-trinidad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diagnostic-arrest",
+   "id": "aerial-stomach",
    "metadata": {},
    "source": [
     "Then use the `tf.data.Dataset` `map` method to pack the `features` of each `(features, label)` pair into the training dataset."
@@ -337,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "recognized-mobile",
+   "id": "exciting-deficit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "challenging-iceland",
+   "id": "paperback-cause",
    "metadata": {},
    "source": [
     "The features element of the `tf.data.Dataset` are now arrays with shape `(batch_size, num_features)`. Let's have a look at a few examples."
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "utility-johnson",
+   "id": "renewable-cleaner",
    "metadata": {},
    "outputs": [
     {
@@ -378,13 +378,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "demanding-banking",
+   "id": "piano-expression",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "electoral-anaheim",
+   "id": "computational-addiction",
    "metadata": {},
    "source": [
     "### **Select the type of model**\n",
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "serious-helena",
+   "id": "interstate-thirty",
    "metadata": {},
    "source": [
     "#### **Select the model**\n",
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "celtic-gregory",
+   "id": "following-bottom",
    "metadata": {},
    "source": [
     "#### **Create a model using `tf.keras.Sequential`**\n",
@@ -430,14 +430,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "electrical-still",
+   "id": "painted-ethnic",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "vocational-parallel",
+   "id": "greater-omaha",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "formed-cream",
+   "id": "foster-stationery",
    "metadata": {},
    "source": [
     "#### **Using the model**\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "sweet-aviation",
+   "id": "transsexual-carter",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eastern-delight",
+   "id": "laughing-teaching",
    "metadata": {},
    "source": [
     "Here each example returns a `logit` for each class. A **logit** is a vector of raw predictions generated by a classification model, and is generally passed on to a normalised function. If the model is solving a multi-class classification problem, logits are generally fed into the `softmax` function. **softmax** generates a vector of normalised probabilities with one value for each possible class.\n",
@@ -500,7 +500,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "clear-remainder",
+   "id": "upper-colonial",
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "every-flood",
+   "id": "collaborative-accent",
    "metadata": {},
    "source": [
     "And taking the `tf.argmax` across classes gives us the predicted class index. "
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "antique-brief",
+   "id": "active-radius",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fixed-connection",
+   "id": "handy-family",
    "metadata": {},
    "source": [
     "But the model hasn't been trained yet, so these aren't good predictions. Indeed, the model here predicts that all species are *Iris versicolor*..."
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "covered-complexity",
+   "id": "generic-brother",
    "metadata": {},
    "source": [
     "### **Train the model**\n",
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "destroyed-championship",
+   "id": "complicated-gibson",
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unlikely-functionality",
+   "id": "informative-short",
    "metadata": {},
    "source": [
     "Gradients are calculated as vectors of partial derivatives of the model function. The gradient points in the direction of steepest ascent. They're stored within a *context*, using `tf.GradientTape`."
@@ -615,7 +615,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "meaning-spencer",
+   "id": "focal-thursday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sunset-determination",
+   "id": "electronic-marine",
    "metadata": {},
    "source": [
     "#### **Create an optimiser**\n",
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "dominican-structure",
+   "id": "beginning-advisory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "instant-tribune",
+   "id": "composed-straight",
    "metadata": {},
    "source": [
     "Now let's use the optimiser to compute a single optimisation step and see what happens"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "academic-translation",
+   "id": "dutch-investing",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sharp-isaac",
+   "id": "trained-train",
    "metadata": {},
    "source": [
     "#### **Training loop**\n",
@@ -712,7 +712,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "sensitive-mumbai",
+   "id": "modern-dealing",
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "similar-hazard",
+   "id": "interim-camcorder",
    "metadata": {},
    "source": [
     "#### **Visualise the loss function over time**\n",
@@ -774,7 +774,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "dominant-photograph",
+   "id": "tight-completion",
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "operating-climate",
+   "id": "elegant-memphis",
    "metadata": {},
    "source": [
     "### **Evaluate the model effectiveness**\n",
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divine-underground",
+   "id": "raising-swedish",
    "metadata": {},
    "source": [
     "#### **Set up the test data set**\n",
@@ -828,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "valuable-factor",
+   "id": "stylish-bidding",
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "chinese-merchant",
+   "id": "framed-treasury",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-integration",
+   "id": "critical-underwear",
    "metadata": {},
    "source": [
     "#### **Evaluate the model on the test set**\n",
@@ -878,7 +878,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "italic-programming",
+   "id": "informed-infrared",
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fewer-azerbaijan",
+   "id": "traditional-explorer",
    "metadata": {},
    "source": [
     "Let's have a look at the last batch"
@@ -913,7 +913,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "connected-roller",
+   "id": "immune-instrumentation",
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faced-winning",
+   "id": "brutal-sunrise",
    "metadata": {},
    "source": [
     "### **Use the trained model to make predictions**\n",
@@ -979,13 +979,45 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "id": "broad-atmosphere",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example 0 prediction: Iris setosa (95.3%)\n",
+      "Example 1 prediction: Iris versicolor (75.6%)\n",
+      "Example 2 prediction: Iris virginica (76.3%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_dataset = tf.convert_to_tensor([\n",
+    "    [5.1, 3.3, 1.7, 0.5,],\n",
+    "    [5.9, 3.0, 4.2, 1.5,],\n",
+    "    [6.9, 3.1, 5.4, 2.1]\n",
+    "])\n",
+    "\n",
+    "# training=False is needed only if there are layers with different\n",
+    "# behavior during training versus inference (e.g. Dropout).\n",
+    "predictions = model(predict_dataset, training=False)\n",
+    "\n",
+    "for i, logits in enumerate(predictions):\n",
+    "    class_idx = tf.argmax(logits).numpy()\n",
+    "    p = tf.nn.softmax(logits)[class_idx]\n",
+    "    name = class_names[class_idx]\n",
+    "    print(\"Example {} prediction: {} ({:4.1f}%)\".format(i, name, 100*p))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "mental-mixture",
+   "id": "reliable-glance",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predict_dataset"
-   ]
+   "source": []
   }
  ],
  "metadata": {
