--- a/tensors-variables.ipynb
+++ b/tensors-variables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "amino-geology",
+   "id": "distinguished-consent",
    "metadata": {},
    "source": [
     "# **Introduction to Tensors and Variables**\n",
@@ -16,21 +16,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understanding-territory",
+   "id": "positive-marketplace",
    "metadata": {},
    "source": [
     "## **Introduction**\n",
     "\n",
-    "In this notebook, we look at tensors, which are multi-dimensional arrays with a uniform type (called a `dtype`)."
+    "In this notebook, we look at tensors, which are multi-dimensional arrays with a uniform type (called a `dtype`). Tensors are (kind of) like `np.arrays`. All tensors are immutable like Python numbers and strings: you can never update the contents of a tensor, only create a new one.\n",
+    "\n",
+    "We also look at variables, a `tf.Variable` represents a tensor whose value can be changed by running operations (ops) on it. Specific ops allow you to read and modify the value of this tensor. Higher level libraries like `tf.keras` use `tf.Variable` to store model parameters."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "imported-threshold",
+   "cell_type": "markdown",
+   "id": "generic-poultry",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## **Load necessary libraries**\n",
+    "\n",
+    "We will start by "
+   ]
   }
  ],
  "metadata": {
